still width issues on mobile

--- a/main-v5.css
+++ b/main-v5.css
@@ -1,9 +1,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,500;0,600;1,300&display=swap');
 
-body {
-    overflow-x:hidden;
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
+
 
 ::-webkit-scrollbar {
     width: 10px;
@@ -64,7 +69,6 @@ body{
 #header-container{
     position:fixed;
     z-index: 1;
-    width: 100vw; 
     top:0;
     width:100%; 
     height:28px;
@@ -660,12 +664,12 @@ h1.post-title {
     .hide-mobile {display: none;} 
     #header{
         width:100%;
+        max-width:960px;
         top:0;
         margin-top:3px;
         height:24px;
-        left:50%;
-        margin-left:-50%;
-        padding: 0 3px;
+        right:50%;
+        margin-right:-50%;
     }
     #header-links{
         float:none;
@@ -679,7 +683,7 @@ h1.post-title {
         
     }
     #header-links li{
-        margin-right:10px;
+        margin-right:8px;
     }
     #main{
         margin-top:80px;
